# fajabot

./: .gitignore  docker-compose.yaml  pyproject.toml  run.py  testme.py
backend/: Dockerfile  pyproject.toml
backend/code/: entrypoint  pyproject.toml
backend/code/fajabot/: application.py  commands.py  cooldown.py  driver.py  events.py  game.py  quests.py  settings.py
backend/code/fajabot/db/: main.py  profile.py  table.py
backend/code/fajabot/rest/: main.py
backend/fajabot/: driver.py
fajabot/: application.py  commands.py  consts.py  driver.py  game.py  profile.py  quests.py  settings.py  ttv.py
frontend/: Dockerfile  package.json
frontend/code/: README.md  index.html  package.json  vite.config.js
frontend/code/public/css/: last.css  main.css
frontend/code/src/: App.vue  main.js
frontend/src/: App.vue
supabase/: config.toml
